# minishogilib

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  pypi.yml  rust.yml  test.yml  wheel.yml
docker/: docker-compose.yml
examples/: 00.ipynb
src/: bitboard.rs  checkmate.rs  lib.rs  mcts.rs  move.rs  neuralnetwork.rs  position.rs  record.rs  reservoir.rs  types.rs  zobrist.rs
