[package]
name = "minishogilib"
version = "0.6.14"
authors = ["nyashiki"]

[lib]
name = "minishogilib"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
rand = "0.6"
lazy_static = "0.2.1"
bitintr = "0.3.0"
ndarray = "0.13.0"
numpy = "0.7.0"
rayon = "1.3.0"
serde = "1.0.104"
serde_json = "1.0.44"
