[package]
name = "minishogilib"
version = "0.6.17"
authors = ["nyashiki"]

[lib]
name = "minishogilib"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.18.1"
features = ["auto-initialize"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
bitintr = "0.3.0"
once_cell = "1.17.1"
rayon = "1.7.0"
rand = "0.8.5"
serde = "1.0.158"
